--- a/src/app/shared/components/profile-card/profile-card.html
+++ b/src/app/shared/components/profile-card/profile-card.html
@@ -32,7 +32,7 @@
         {{ firstName || userType }}
       </h2>
       <p class="text-muted fs-5 fw-medium mb-0">
-        {{ country || "Location not specified" }}
+        {{ getHostStatus() }}
       </p>
     </div>
 
@@ -47,7 +47,7 @@
             class="fs-5 fw-semibold text-dark d-flex align-items-center gap-1"
           >
             {{ stat.value }}
-            <i *ngIf="stat.icon" [class]="stat.icon"></i>
+            <i *ngIf="stat.icon" [ngClass]="stat.icon"></i>
           </span>
         </div>
       </div>
